...
                LoginViewState.SubmissionError(
                    credentials = activeCredentials,
                    errorMessage = UIText.StringText("Something went wrong.")
                ),
                LoginViewState.Active(
                    credentials = activeCredentials,
                    emailInputErrorMessage = UIText.StringText("Please enter an email."),
                    passwordInputErrorMessage = UIText.StringText("Please enter a password")
                ),
            )
        }
}

